--- a/package.json
+++ b/package.json
@@ -28,11 +28,10 @@
     "scss:watch": "node ./scripts/scss.js --watch",
     "semantic-release": "lerna exec --concurrency 1 -- 'export MODULE_NAME=$(echo $LERNA_PACKAGE_NAME | cut -d / -f 2) && SLACK_WEBHOOK=https://hooks.slack.com/services/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 npx --no-install semantic-release -e @ruhmesmeile/semantic-release-monorepo --tag-format=\"${MODULE_NAME}@\\${version}\"'",
     "stylelint": "stylelint \"**/*.scss\"",
-    "storybook": "npm-run-all 'rm-frontend:build default' storybook:generate --parallel 'rm-frontend:watch default' storybook:start",
+    "storybook": "node packages/@rm-frontend/storybook",
     "storybook:build": "node packages/@rm-frontend/storybook build",
     "storybook:debug": "node packages/@rm-frontend/storybook debug",
     "storybook:generate": "node packages/@rm-frontend/storybook generate",
-    "storybook:start": "node packages/@rm-frontend/storybook start",
     "staged": "git diff --name-only --cached | grep '@rm-frontend' | cut -d / -f 3 | awk '!seen[$0]++'",
     "lib": "run-s schema2ts lib:build lib:deref",
     "lib:build": "lerna run --stream lib",
@@ -58,7 +57,7 @@
     "jsonschema2graphql": "^1.1.1",
     "license-checker": "^25.0.1",
     "rollup": "^2.45.2",
-    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-node-externals": "^2.2.0",
     "sass": "^1.32.8"
   },
   "devDependencies": {
@@ -67,6 +66,7 @@
     "@ruhmesmeile/semantic-release-monorepo": "^6.2.0",
     "@semantic-release/changelog": "^5.0.0",
     "@semantic-release/git": "9.0.0",
+    "builtin-modules": "^3.1.0",
     "commitizen": "^4.0.3",
     "conventional-changelog-angular-bitbucket": "^1.2.0",
     "cz-conventional-changelog": "^3.0.2",
