--- a/packages/@rm-frontend/storybook/package.json
+++ b/packages/@rm-frontend/storybook/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rm-frontend/storybook",
-  "version": "2.2.0",
+  "name": "storybook",
+  "private": true,
   "description": "RM Frontend Storybook Storefront",
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://bitbucket.ruhmesmeile.tools/projects/FRONT/repos/rm-frontend/browse/packages/@rm-frontend/storybook",
@@ -26,7 +26,7 @@
     "@storybook/react": "^6.2.5",
     "@whitespace/storybook-addon-html": "5.0.0",
     "ajv": "^7.2.1",
-    "capital-case": "^1.0.4",
+    "change-case": "^4.1.2",
     "del": "^6.0.0",
     "fast-glob": "^3.2.5",
     "fs-extra": "^9.1.0",
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.1",
     "storybook-dark-mode": "^1.0.7",
     "storybook-design-token": "^1.0.1",
+    "svgstore": "^3.0.0-2",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
