--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -3,18 +3,29 @@
   "private": true,
   "main": "source/index.js",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-modules": "^0.1.4",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-replace": "^2.4.2",
     "@wessberg/rollup-plugin-ts": "^1.3.14",
     "autoprefixer": "^10.2.5",
+    "babel-plugin-transform-jsx-to-htm": "^2.1.0",
     "chokidar": "^3.5.1",
     "del": "^6.0.0",
     "fast-glob": "^3.2.5",
     "find-up": "^5.0.0",
     "fs-extra": "^9.1.0",
+    "lodash": "^4.17.21",
     "postcss-clean": "^1.2.2",
     "postcss-combine-duplicated-selectors": "^10.0.2",
     "postcss-sort-media-queries": "^3.8.9",
     "rollup": "^2.45.2",
+    "rollup-plugin-import-resolver": "^1.2.0",
     "rollup-plugin-node-externals": "^2.2.0",
     "sass": "^1.32.8"
   }
