--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -5,9 +5,14 @@
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://ruhmesmeile.com",
   "license": "SEE LICENSE IN LICENSE",
+  "scripts": {
+    "lib": "node ../../tools/build-components/source"
+  },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.13.10",
     "htm": "^3.0.4",
+    "lazysizes": "^5.3.2",
+    "pubsub-js": "^1.9.3",
     "vhtml": "^2.2.0"
   }
 }
