--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "lib": "node ../../tools/build-components/source"
   },
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "@babel/runtime-corejs3": "^7.13.10",
     "@glidejs/glide": "git://github.com/glidejs/glide.git#master",
