--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -13,7 +13,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-replace": "^2.4.2",
     "@wessberg/rollup-plugin-ts": "^1.3.14",
-    "autoprefixer": "^10.2.5",
+    "autoprefixer": "^9.8.6",
     "babel-plugin-transform-jsx-to-htm": "^2.1.0",
     "chokidar": "^3.5.1",
     "del": "^6.0.0",
@@ -21,12 +21,14 @@
     "find-up": "^5.0.0",
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
+    "postcss": "^7.0.32",
     "postcss-clean": "^1.2.2",
-    "postcss-combine-duplicated-selectors": "^10.0.2",
-    "postcss-sort-media-queries": "^3.8.9",
+    "postcss-combine-duplicated-selectors": "^9.4.0",
+    "postcss-sort-media-queries": "^1.7.26",
     "rollup": "^2.45.2",
     "rollup-plugin-import-resolver": "^1.2.0",
     "rollup-plugin-node-externals": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.32.8"
   }
 }
