chore: update lerna config

--- a/lerna.json
+++ b/lerna.json
@@ -5,6 +5,10 @@
   "command": {
     "bootstrap": {
       "hoist": true
+    },
+    "version": {
+      "message": "chore: new release",
+      "no-private": true
     }
   }
 }
