--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kickstartds/core",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "kickstartDs Core Module",
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://ruhmesmeile.com",
