--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kickstartds/base",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "kickstartDs Base Module",
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://ruhmesmeile.com",
@@ -17,7 +17,7 @@
   "dependencies": {
     "@babel/runtime-corejs3": "^7.13.10",
     "@glidejs/glide": "git://github.com/glidejs/glide.git#master",
-    "@kickstartds/core": "^0.0.0",
+    "@kickstartds/core": "^1.0.0-alpha.0",
     "animate.js": "^2.0.2",
     "bourbon": "^6.0.0",
     "classnames": "^2.2.6",
