chore: fix package descriptions, update readme

--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kickstartds/base",
   "version": "1.0.0-alpha.0",
-  "description": "kickstartDs Base Module",
+  "description": "kickstartDS Base Module",
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://ruhmesmeile.com",
   "license": "SEE LICENSE IN LICENSE",
