--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kickstartds/core",
   "version": "1.0.0-alpha.0",
-  "description": "kickstartDs Core Module",
+  "description": "kickstartDS Core Module",
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://ruhmesmeile.com",
   "license": "SEE LICENSE IN LICENSE",
