--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -4,6 +4,9 @@
   "description": "kickstartDS Base Module",
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://ruhmesmeile.com",
+  "storybook": {
+    "url": "https://master--6076f2e4564d9a002139d93b.chromatic.com"
+  },
   "license": "SEE LICENSE IN LICENSE",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
