--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "babel-loader": "^8.2.2",
+    "chromatic": "^5.6.2",
     "typescript": "^4.2.3"
   }
 }
