--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -22,28 +22,28 @@
     "@glidejs/glide": "git://github.com/glidejs/glide.git#master",
     "@kickstartds/core": "^1.0.0-alpha.2",
     "animate.js": "^2.0.2",
-    "bourbon": "^6.0.0",
     "classnames": "^2.2.6",
     "css-element-queries": "^1.2.3",
     "date-fns": "^2.19.0",
     "focus-visible": "^5.0.2",
     "formbouncerjs": "^1.4.6",
-    "htm": "^3.0.4",
-    "include-media": "^1.4.9",
     "include-media-export": "^1.0.3",
     "lazysizes": "^5.3.2",
     "lodash-es": "^4.17.20",
     "objectFitPolyfill": "^2.3.0",
     "photoswipe": "^4.1.3",
     "pikaday": "^1.8.0",
-    "react": "^17.0.2",
     "react-markdown": "^5.0.3",
-    "sass-yiq": "^1.0.0",
     "simplebar": "^5.0.7",
-    "stickybits": "^3.7.0",
-    "vhtml": "^2.2.0"
+    "stickybits": "^3.7.0"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.11"
+    "@types/classnames": "^2.2.11",
+    "bourbon": "^6.0.0",
+    "include-media": "^1.4.9",
+    "sass-yiq": "^1.0.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2"
   }
 }
