--- a/packages/components/content/package.json
+++ b/packages/components/content/package.json
@@ -20,7 +20,9 @@
     "@kickstartds/core": "^1.0.0-alpha.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.19.0",
-    "objectFitPolyfill": "^2.3.0",
+    "objectFitPolyfill": "^2.3.0"
+  },
+  "peerDependencies": {
     "react": "^17.0.2"
   }
 }
