build: update dependencies

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "git-config": "git config --local include.path ../.gitconfig",
     "lint": "run-p eslint stylelint",
     "list": "lerna la",
-    "postinstall": "run-p git-config copy-env-file clear-cache",
+    "postinstall": "run-p git-config copy-env-file",
     "schema2ts": "node ./scripts/schemaToTypescript.js",
     "schema2ts:watch": "node ./scripts/schemaToTypescript.js --watch",
     "staged": "git diff --name-only --cached | grep '@kickstartds' | cut -d / -f 3 | awk '!seen[$0]++'",
@@ -42,11 +42,10 @@
     "license-checker": "^25.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0",
-    "builtin-modules": "^3.1.0",
-    "commitizen": "^4.0.3",
-    "cz-conventional-changelog": "^3.0.2",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "commitizen": "^4.2.3",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.21.0",
     "husky": "^4.3.8",
     "lerna": "^4.0.0",
