--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -15,6 +15,7 @@
     "@wessberg/rollup-plugin-ts": "^1.3.14",
     "autoprefixer": "^9.8.6",
     "babel-plugin-transform-jsx-to-htm": "^2.1.0",
+    "builtin-modules": "^3.2.0",
     "chokidar": "^3.5.1",
     "del": "^6.0.0",
     "fast-glob": "^3.2.5",
