chore: add context to circle ci workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,5 @@ jobs:
 workflows:
   chromatic-deploy:
     jobs:
-      - chromatic-deployment
+      - chromatic-deployment:
+          context: kickstartDS
