--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "@babel/runtime-corejs3": "^7.13.10",
+    "bourbon": "^7.0.0",
     "htm": "^3.0.4",
     "lazysizes": "^5.3.2",
     "pubsub-js": "^1.9.3",
