--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -21,5 +21,8 @@
     "lazysizes": "^5.3.2",
     "pubsub-js": "^1.9.3",
     "vhtml": "^2.2.0"
+  },
+  "devDependencies": {
+    "include-media": "^1.4.9"
   }
 }
