--- a/packages/components/content/package.json
+++ b/packages/components/content/package.json
@@ -4,6 +4,9 @@
   "description": "kickstartDS Content Module",
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://ruhmesmeile.com",
+  "storybook": {
+    "url": "https://master--608332fa9164bb0021bc5f97.chromatic.com"
+  },
   "license": "SEE LICENSE IN LICENSE",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
