feat: first take on monorepo storybooks
build one storybook per module for seamless and fitting 'npm install'-integration in projects

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "build-components": "lerna run --stream build",
     "copy-env-file": "[ ! -f .env ] && cp .env-example .env || true",
     "chromatic": "npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
+    "chromatic-base": "npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-base:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
+    "chromatic-blog": "npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-blog:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
+    "chromatic-content": "npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-content:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
     "dereference": "node scripts/schemaDereference.js",
     "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
     "find-licenses": "node ./scripts/license.js",
@@ -23,6 +26,9 @@
     "storybook:build": "node packages/tools/storybook build",
     "storybook:debug": "node packages/tools/storybook debug",
     "storybook:generate": "node packages/tools/storybook generate",
+    "storybook-base:build": "node packages/tools/storybook build base",
+    "storybook-blog:build": "node packages/tools/storybook build blog",
+    "storybook-content:build": "node packages/tools/storybook build content",
     "stylelint": "stylelint \"**/*.scss\"",
     "prepare": "husky install",
     "watch-tokens": "sass --watch --load-path=node_modules packages/components/core/source/design-tokens/tokens.scss packages/components/core/lib/design-tokens/tokens.css"
