--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -6,15 +6,11 @@
     "storybook": "start-storybook --debug-webpack"
   },
   "dependencies": {
-    "@storybook/addon-a11y": "^6.2.5",
-    "@storybook/addon-actions": "^6.2.5",
-    "@storybook/addon-console": "^1.2.3",
-    "@storybook/addon-controls": "^6.2.5",
-    "@storybook/addon-docs": "^6.2.5",
-    "@storybook/addon-viewport": "^6.2.5",
-    "@storybook/cli": "^6.2.5",
-    "@storybook/react": "^6.2.5",
-    "@whitespace/storybook-addon-html": "5.0.0",
+    "@storybook/addon-actions": "^6.3.0-alpha.14",
+    "@storybook/addon-essentials": "^6.3.0-alpha.14",
+    "@storybook/cli": "^6.3.0-alpha.14",
+    "@storybook/react": "^6.3.0-alpha.14",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "ajv": "^7.2.1",
     "change-case": "^4.1.2",
     "del": "^6.0.0",
@@ -23,13 +19,15 @@
     "lazysizes": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
+    "storybook-builder-vite": "0.0.5",
     "storybook-dark-mode": "^1.0.7",
     "storybook-design-token": "^1.0.1",
     "svgstore": "^3.0.0-2",
+    "vite": "^2.1.5",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.1",
+    "@babel/core": "^7.13.16",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "babel-loader": "^8.2.2",
