build: improve build task
* add watch task
* inline styles to components

--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -16,11 +16,16 @@
     "autoprefixer": "^9.8.6",
     "babel-plugin-transform-jsx-to-htm": "^2.1.0",
     "builtin-modules": "^3.2.0",
+    "change-case": "^4.1.2",
     "chokidar": "^3.5.1",
+    "debug": "^4.3.1",
     "del": "^6.0.0",
     "fast-glob": "^3.2.5",
     "find-up": "^5.0.0",
     "fs-extra": "^9.1.0",
+    "json-schema-merge-allof": "^0.8.1",
+    "json-schema-ref-parser": "^9.0.7",
+    "json-schema-to-typescript": "^10.1.4",
     "lodash": "^4.17.21",
     "postcss": "^7.0.32",
     "postcss-clean": "^1.2.2",
@@ -29,6 +34,7 @@
     "rollup": "^2.45.2",
     "rollup-plugin-import-resolver": "^1.2.0",
     "rollup-plugin-node-externals": "^2.2.0",
+    "rollup-plugin-styles": "^3.14.1",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.32.8"
   }
