--- a/packages/components/blog/package.json
+++ b/packages/components/blog/package.json
@@ -12,6 +12,8 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "build": "node ../../tools/build-components/source",
+    "watch": "node ../../tools/build-components/source --watch",
+    "schema": "node ../../tools/build-components/source --schema",
     "prepublishOnly": "NODE_ENV=production npm run build"
   },
   "files": [
