--- a/packages/components/content/package.json
+++ b/packages/components/content/package.json
@@ -17,7 +17,8 @@
     "prepublishOnly": "NODE_ENV=production npm run build"
   },
   "files": [
-    "lib"
+    "lib",
+    "source/**/*-vars.scss"
   ],
   "dependencies": {
     "@babel/runtime-corejs3": "^7.13.10",
