--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
+    "@optimize-lodash/rollup-plugin": "^1.0.0",
     "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "babel-loader": "^8.2.2",
