--- a/packages/components/content/package.json
+++ b/packages/components/content/package.json
@@ -20,7 +20,7 @@
     "lib"
   ],
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.13.10",
+    "@babel/runtime": "^7.13.17",
     "@kickstartds/base": "^1.0.0-alpha.6",
     "@kickstartds/core": "^1.0.0-alpha.4",
     "classnames": "^2.2.6",
