--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -3,10 +3,8 @@
   "private": true,
   "main": "source/index.js",
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-modules": "^0.1.4",
+    "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@rollup/plugin-babel": "^5.3.0",
