--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -6,11 +6,6 @@
     "storybook": "start-storybook"
   },
   "dependencies": {
-    "@storybook/addon-actions": "^6.3.0-alpha.14",
-    "@storybook/addon-essentials": "^6.3.0-alpha.14",
-    "@storybook/cli": "^6.3.0-alpha.14",
-    "@storybook/react": "^6.3.0-alpha.14",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
     "ajv": "^7.2.1",
     "change-case": "^4.1.2",
     "del": "^6.0.0",
@@ -19,22 +14,20 @@
     "lazysizes": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
-    "storybook-builder-vite": "0.0.5",
-    "storybook-dark-mode": "^1.0.7",
-    "storybook-design-token": "^1.0.1",
-    "svgstore": "^3.0.0-2",
-    "vite": "^2.1.5",
-    "webpack": "^4.46.0"
+    "svgstore": "^3.0.0-2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
-    "@optimize-lodash/rollup-plugin": "^1.0.0",
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@storybook/addon-essentials": "^6.3.0-alpha.14",
+    "@storybook/cli": "^6.3.0-alpha.14",
+    "@storybook/react": "^6.3.0-alpha.14",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.6.2",
-    "typescript": "^4.2.3"
+    "storybook-builder-vite": "0.0.5",
+    "typescript": "^4.2.3",
+    "vite": "^2.1.5"
   }
 }
