--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "build": "lerna run --stream --no-prefix build",
     "watch": "lerna run --parallel --no-prefix watch",
     "copy-env-file": "[ ! -f .env ] && cp .env-example .env || true",
-    "chromatic": "npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
-    "chromatic-base": "npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-base:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
-    "chromatic-blog": "npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-blog:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
-    "chromatic-content": "npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-content:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
+    "chromatic": "NODE_ENV=production npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
+    "chromatic-base": "NODE_ENV=production npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-base:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
+    "chromatic-blog": "NODE_ENV=production npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-blog:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
+    "chromatic-content": "NODE_ENV=production npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-content:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
     "dereference": "node scripts/schemaDereference.js",
     "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
     "find-licenses": "node ./scripts/license.js",
@@ -25,9 +25,9 @@
     "storybook:build": "node packages/tools/storybook build",
     "storybook:debug": "node packages/tools/storybook debug",
     "storybook:generate": "node packages/tools/storybook generate",
-    "storybook-base:build": "node packages/tools/storybook build base",
-    "storybook-blog:build": "node packages/tools/storybook build blog",
-    "storybook-content:build": "node packages/tools/storybook build content",
+    "storybook-base:build": "node packages/tools/storybook build --module base",
+    "storybook-blog:build": "node packages/tools/storybook build --module blog",
+    "storybook-content:build": "node packages/tools/storybook build --module content",
     "stylelint": "stylelint \"**/*.scss\"",
     "prepare": "husky install",
     "watch-tokens": "sass --watch --load-path=node_modules packages/components/core/source/design-tokens/tokens.scss packages/components/core/lib/design-tokens/tokens.css"
