--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -14,7 +14,8 @@
     "lazysizes": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
-    "svgstore": "^3.0.0-2"
+    "svgstore": "^3.0.0-2",
+    "yargs-parser": "^20.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
