--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.25.0",
+    "eslint-import-resolver-lerna": "^2.0.0",
     "husky": "^6.0.0",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
