--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -24,10 +24,12 @@
     "htm": "^3.0.4",
     "lazysizes": "^5.3.2",
     "pubsub-js": "^1.9.3",
-    "react": "^17.0.2",
     "vhtml": "^2.2.0"
   },
   "devDependencies": {
     "include-media": "^1.4.9"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2"
   }
 }
