build: fix chromatic build

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "build": "lerna run --stream --no-prefix build",
     "watch": "lerna run --parallel --no-prefix watch",
     "copy-env-file": "[ ! -f .env ] && cp .env-example .env || true",
-    "chromatic": "NODE_ENV=production npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
-    "chromatic-base": "NODE_ENV=production npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-base:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
-    "chromatic-blog": "NODE_ENV=production npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-blog:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
-    "chromatic-content": "NODE_ENV=production npm run build && chromatic --project-token $CHROMATIC_PROJECT_TOKEN --build-script-name 'storybook-content:build' --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes",
+    "clear-storybook-dist": "rm -rf packages/tools/storybook/dist",
+    "run-chromatic": "cd packages/tools/storybook && npm run chromatic",
+    "chromatic": "NODE_ENV=production run-s clear-storybook-dist build 'storybook:build' run-chromatic",
+    "chromatic-base": "NODE_ENV=production run-s clear-storybook-dist build 'storybook-base:build' run-chromatic",
+    "chromatic-blog": "NODE_ENV=production run-s clear-storybook-dist build 'storybook-blog:build' run-chromatic",
+    "chromatic-content": "NODE_ENV=production run-s clear-storybook-dist build 'storybook-content:build' run-chromatic",
     "dereference": "node scripts/schemaDereference.js",
     "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
     "find-licenses": "node ./scripts/license.js",
@@ -24,7 +26,6 @@
     "storybook": "node packages/tools/storybook",
     "storybook:build": "node packages/tools/storybook build",
     "storybook:debug": "node packages/tools/storybook debug",
-    "storybook:generate": "node packages/tools/storybook generate",
     "storybook-base:build": "node packages/tools/storybook build --module base",
     "storybook-blog:build": "node packages/tools/storybook build --module blog",
     "storybook-content:build": "node packages/tools/storybook build --module content",
