--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -18,6 +18,7 @@
     "chokidar": "^3.5.1",
     "debug": "^4.3.1",
     "del": "^6.0.0",
+    "esbuild": "^0.11.19",
     "fast-glob": "^3.2.5",
     "find-up": "^5.0.0",
     "fs-extra": "^10.0.0",
