--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -2,11 +2,20 @@
   "name": "@kickstartds-internal/build-components",
   "private": true,
   "main": "source/index.js",
+  "scripts": {
+    "final-bundle": "node source/finalBundle.js"
+  },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@kickstartds/base": "^1.0.0-alpha.13",
+    "@kickstartds/blog": "^1.0.0-alpha.13",
+    "@kickstartds/content": "^1.0.0-alpha.13",
+    "@kickstartds/core": "^1.0.0-alpha.11",
+    "@lerna/project": "^4.0.0",
+    "@lerna/query-graph": "^4.0.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-replace": "^2.4.2",
