--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -11,7 +11,7 @@
     "build": "node ../../tools/build-components/source",
     "watch": "node ../../tools/build-components/source --watch",
     "schema": "node ../../tools/build-components/source --schema",
-    "final-bundle": "node ../../tools/build-components && npm run final-bundle",
+    "final-bundle": "cd ../../tools/build-components && npm run final-bundle",
     "prepublishOnly": "NODE_ENV=production npm run build && npm run final-bundle"
   },
   "files": [
