--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "main": "source/index.js",
   "scripts": {
-    "final-bundle": "node source/finalBundle.js"
+    "final-bundle": "NODE_ENV=production node source/finalBundle.js"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.13.15",
