--- a/packages/components/content/package.json
+++ b/packages/components/content/package.json
@@ -25,6 +25,7 @@
     "@kickstartds/base": "^1.0.0-alpha.15",
     "@kickstartds/core": "^1.0.0-alpha.13",
     "classnames": "^2.2.6",
+    "countup.js": "^2.0.7",
     "date-fns": "^2.19.0",
     "objectFitPolyfill": "^2.3.0"
   },
