--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -39,6 +39,6 @@
     "chromatic": "^5.8.0",
     "storybook-builder-vite": "0.0.5",
     "typescript": "^4.2.3",
-    "vite": "^2.1.5"
+    "vite": "~2.2.0"
   }
 }
