--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -29,16 +29,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
-    "@storybook/addon-essentials": "^6.3.0-alpha.14",
-    "@storybook/cli": "^6.3.0-alpha.14",
-    "@storybook/react": "^6.3.0-alpha.14",
+    "@storybook/addon-essentials": "^6.3.0-alpha.25",
+    "@storybook/cli": "^6.3.0-alpha.25",
+    "@storybook/react": "^6.3.0-alpha.25",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.8.0",
-    "storybook-builder-vite": "0.0.5",
+    "storybook-builder-vite": "0.0.6",
     "typescript": "^4.2.3",
-    "vite": "~2.2.0"
+    "vite": "^2.3.0"
   }
 }
