--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -11,11 +11,12 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-replace": "^2.4.2",
     "@wessberg/rollup-plugin-ts": "^1.3.14",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.2.5",
     "babel-plugin-transform-jsx-to-htm": "^2.1.0",
     "builtin-modules": "^3.2.0",
     "change-case": "^4.1.2",
     "chokidar": "^3.5.1",
+    "cssnano": "^5.0.2",
     "debug": "^4.3.1",
     "del": "^6.0.0",
     "fast-glob": "^3.2.5",
@@ -25,10 +26,9 @@
     "json-schema-ref-parser": "^9.0.7",
     "json-schema-to-typescript": "^10.1.4",
     "lodash": "^4.17.21",
-    "postcss": "^7.0.32",
-    "postcss-clean": "^1.2.2",
-    "postcss-combine-duplicated-selectors": "^9.4.0",
-    "postcss-sort-media-queries": "^1.7.26",
+    "postcss": "^8.2.15",
+    "postcss-combine-duplicated-selectors": "^10.0.3",
+    "postcss-sort-media-queries": "^3.9.10",
     "rollup": "^2.45.2",
     "rollup-plugin-import-resolver": "^1.2.0",
     "rollup-plugin-node-externals": "^2.2.0",
