--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -29,9 +29,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
-    "@storybook/addon-essentials": "^6.3.0-alpha.34",
-    "@storybook/cli": "^6.3.0-alpha.34",
-    "@storybook/react": "^6.3.0-alpha.34",
+    "@storybook/addon-essentials": "^6.3.0-beta.14",
+    "@storybook/cli": "^6.3.0-beta.14",
+    "@storybook/react": "^6.3.0-beta.14",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
