--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -29,16 +29,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
-    "@storybook/addon-essentials": "^6.3.0-beta.14",
-    "@storybook/cli": "^6.3.0-beta.14",
-    "@storybook/react": "^6.3.0-beta.14",
+    "@storybook/addon-a11y": "^6.3.0-rc.4",
+    "@storybook/addon-essentials": "^6.3.0-rc.4",
+    "@storybook/cli": "^6.3.0-rc.4",
+    "@storybook/react": "^6.3.0-rc.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.8.0",
-    "storybook-builder-vite": "0.0.6",
+    "storybook-builder-vite": "^0.0.8",
     "typescript": "^4.3.2",
-    "vite": "^2.3.0"
+    "vite": "^2.3.2"
   }
 }
