--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -11,7 +11,7 @@
     "build": "node ../../tools/build-components/source",
     "watch": "node ../../tools/build-components/source --watch",
     "schema": "node ../../tools/build-components/source --schema",
-    "prepublishOnly": "NODE_ENV=production npm run build"
+    "prepublishOnly": "NODE_ENV=production yarn run build"
   },
   "files": [
     "lib",
