--- a/packages/tools/netlify-cms/package.json
+++ b/packages/tools/netlify-cms/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@kickstartds-internal/netlify-cms",
+  "version": "1.0.0",
   "private": true,
   "main": "index.js",
   "scripts": {},
