--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -14,7 +14,7 @@
     "build": "node ../../tools/build-components/source",
     "watch": "node ../../tools/build-components/source --watch",
     "schema": "node ../../tools/build-components/source --schema",
-    "prepublishOnly": "NODE_ENV=production npm run build"
+    "prepublishOnly": "NODE_ENV=production yarn run build"
   },
   "files": [
     "lib",
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/react": "^17.0.2",
     "bourbon": "^7.0.0",
     "sass-yiq": "^1.0.0"
   },
