--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@kickstartds-internal/build-components",
+  "version": "1.0.0",
   "private": true,
   "main": "source/index.js",
   "dependencies": {
+    "@babel/core": "^7.14.6",
     "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
@@ -10,7 +12,6 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-replace": "^2.4.2",
-    "@wessberg/rollup-plugin-ts": "^1.3.14",
     "autoprefixer": "^10.2.5",
     "babel-plugin-transform-jsx-to-htm": "^2.1.0",
     "builtin-modules": "^3.2.0",
@@ -34,6 +35,7 @@
     "rollup-plugin-node-externals": "^2.2.0",
     "rollup-plugin-styles": "^3.14.1",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-ts": "^1.4.0",
     "sass": "^1.32.8"
   }
 }
