--- a/packages/tools/eslint-config/package.json
+++ b/packages/tools/eslint-config/package.json
@@ -10,6 +10,7 @@
     "eslint": "^7.28.0"
   },
   "dependencies": {
+    "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.13.14",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
