--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@kickstartds-internal/storybook",
+  "version": "1.0.0",
   "private": true,
   "main": "index.js",
   "scripts": {
     "run-chromatic": "chromatic --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes --exit-once-uploaded --project-token $CHROMATIC_PROJECT_TOKEN",
-    "chromatic": "npm run run-chromatic -- --build-script-name 'storybook:build'",
-    "chromatic-base": "npm run run-chromatic -- --build-script-name 'storybook-base:build'",
-    "chromatic-blog": "npm run run-chromatic -- --build-script-name 'storybook-blog:build'",
-    "chromatic-content": "npm run run-chromatic -- --build-script-name 'storybook-content:build'",
+    "chromatic": "yarn run run-chromatic -- --build-script-name 'storybook:build'",
+    "chromatic-base": "yarn run run-chromatic -- --build-script-name 'storybook-base:build'",
+    "chromatic-blog": "yarn run run-chromatic -- --build-script-name 'storybook-blog:build'",
+    "chromatic-content": "yarn run run-chromatic -- --build-script-name 'storybook-content:build'",
     "storybook": "node index.js",
     "storybook:build": "node index.js build",
     "storybook-base:build": "node index.js build --module=base",
@@ -28,7 +29,7 @@
     "yargs-parser": "^20.2.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
+    "@babel/core": "^7.14.6",
     "@storybook/addon-a11y": "^6.3.0-rc.4",
     "@storybook/addon-essentials": "^6.3.0-rc.4",
     "@storybook/cli": "^6.3.0-rc.4",
@@ -36,7 +37,6 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "babel-loader": "^8.2.2",
     "chromatic": "^5.8.0",
     "storybook-addon-performance": "^0.15.2",
     "storybook-builder-vite": "^0.0.8",
