--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,77 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+# Work in progress!!
+
 version: 2.1
 
+defaults: &defaults
+  docker:
+    - image: circleci/node:12
+  working_directory: ~/repo
+
+aliases:
+  - &restore-cache
+    keys:
+      - yarn-{{ checksum "yarn.lock" }}-{{ checksum ".circleci/config.yml" }}
+      - yarn-{{ checksum "yarn.lock" }}
+      - yarn-
+  - &save-cache
+    key: yarn-{{ checksum "yarn.lock" }}-{{ checksum ".circleci/config.yml" }}
+    paths:
+      - ~/.cache/yarn
+      - node_modules
+  - &attach_workspace
+      attach_workspace:
+        at: ~/repo
+
 jobs:
-  chromatic-deployment:
-    docker:
-      - image: circleci/node:12
-    working_directory: ~/repo
+  build:
+    <<: *defaults
     steps:
       - checkout
-      - restore_cache:
-          name: Restore Yarn Package Cache
-          keys:
-            - yarn-packages-{{ checksum "yarn.lock" }}
+      - restore_cache: *restore-cache
       - run:
           name: Install Dependencies
           command: yarn install --frozen-lockfile --cache-folder ~/.cache/yarn
+      - save_cache: *save-cache
+      - run:
+          name: Build
+          environment:
+            NODE_ENV: production
+          command: yarn build
+      - run:
+          command: rm -rf .git
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+
+  chromatic:
+    <<: *defaults
+    steps:
+      - *attach_workspace
       - run:
           name: Build Storybook & deploy to Chromatic
           command: yarn run chromatic
-      - save_cache:
-          name: Save Yarn Package Cache
-          key: yarn-packages-{{ checksum "yarn.lock" }}
-          paths:
-            - ~/.cache/yarn
+
+  release:
+    <<: *defaults
+    steps:
+      - *attach_workspace
+      - run:
+          name: Create Release
+          command: yarn auto shipit --dry-run
+
 workflows:
-  chromatic-deploy:
+  release:
     jobs:
-      - chromatic-deployment:
+      - build
+
+      - chromatic:
           context: kickstartDS
+          requires:
+            - build
+
+      - release:
+          context: kickstartDS
+          requires:
+            - build
 
