--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kickstartds",
   "private": true,
+  "repository": "kickstartDS/kickstartDS",
   "workspaces": [
     "packages/*/*"
   ],
@@ -50,8 +51,13 @@
     "react": "^17.0.2"
   },
   "devDependencies": {
+    "@auto-it/all-contributors": "^10.29.3",
+    "@auto-it/first-time-contributor": "^10.29.3",
+    "@auto-it/npm": "^10.29.3",
+    "@auto-it/released": "^10.29.3",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "auto": "^10.29.3",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.29.0",
@@ -63,6 +69,10 @@
     "prettier": "^2.3.1",
     "stylelint": "^13.13.0",
     "typescript": "^4.3.4"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
   },
   "config": {
     "commitizen": {
