fix(lerna): add auto settings to lerna.json

--- a/lerna.json
+++ b/lerna.json
@@ -6,6 +6,9 @@
     "version": {
       "message": "chore: new release",
       "no-private": true
+    },
+    "publish": {
+      "verifyAccess": false
     }
   }
 }
