ci(circleci): add publish step for chromatic modules

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,8 @@ aliases:
       - ~/.cache/yarn
       - node_modules
   - &attach_workspace
-      attach_workspace:
-        at: ~/repo
+    attach_workspace:
+      at: ~/repo
 
 jobs:
   build:
@@ -62,6 +62,33 @@ jobs:
           name: Create Release
           command: yarn auto shipit --dry-run
 
+  publish:
+    <<: *defaults
+    steps:
+      - checkout
+      - restore_cache: *restore-cache
+      - *attach_workspace
+      - run:
+          name: Publish Chromatic Module Base
+          environment:
+            CHROMATIC_PROJECT_TOKEN: $CHROMATIC_PROJECT_TOKEN_BASE
+          command: yarn run chromatic-base
+      - run:
+          name: Publish Chromatic Module Blog
+          environment:
+            CHROMATIC_PROJECT_TOKEN: $CHROMATIC_PROJECT_TOKEN_BLOG
+          command: yarn run chromatic-blog
+      - run:
+          name: Publish Chromatic Module Content
+          environment:
+            CHROMATIC_PROJECT_TOKEN: $CHROMATIC_PROJECT_TOKEN_CONTENT
+          command: yarn run chromatic-content
+      - run:
+          name: Publish Chromatic Module Form
+          environment:
+            CHROMATIC_PROJECT_TOKEN: $CHROMATIC_PROJECT_TOKEN_FORM
+          command: yarn run chromatic-form
+
 workflows:
   release:
     jobs:
@@ -77,3 +104,7 @@ workflows:
           requires:
             - build
 
+      - publish:
+          context: kickstartDS
+          requires:
+            - build
