--- a/packages/components/form/package.json
+++ b/packages/components/form/package.json
@@ -4,6 +4,9 @@
   "description": "kickstartDS Form Module",
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://ruhmesmeile.com",
+  "storybook": {
+    "url": "https://master--60832aa30a8f94002193547c.chromatic.com"
+  },
   "license": "SEE LICENSE IN LICENSE",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
